Alterando titulo da pagina

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   <link rel="manifest" href="manifest.json">
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:600&display=swap" rel="stylesheet">
 
-  <title>Reserva de salas</title>
+  <title>Controle de estoque</title>
 </head>
 
 <body>
